--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.2",
     "expo": "~54.0.12",
     "expo-clipboard": "^8.0.7",
+    "expo-dev-client": "~6.0.13",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
